tests/ui/test_fail/01-sync_only.rs
use amphi::amphi;

#[amphi(sync_only)]
mod amphi{
    pub async fn my_fn() -> bool {
        true
    }
}

fn main() {
    use self::asynchronous::my_fn;
}
